# ProteinView

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: workflow.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/plans/: 2026-03-06-depth-tinting-rna-dna-design.md
examples/: 1-heptanol_model_0.cif
src/: app.rs  event.rs  main.rs
src/model/: interface.rs  mod.rs  protein.rs  secondary.rs
src/parser/: fetch.rs  mod.rs  pdb.rs
src/render/: braille.rs  camera.rs  cartoon.rs  color.rs  framebuffer.rs  hd.rs  mod.rs  ribbon.rs
src/ui/: header.rs  help_overlay.rs  helpbar.rs  interface_panel.rs  mod.rs  statusbar.rs  viewport.rs
